--- a/diary/frontend/src/components/header-auth/header-auth.module.css
+++ b/diary/frontend/src/components/header-auth/header-auth.module.css
@@ -1,48 +1,68 @@
 .user {
     display: flex;
-    position: relative;
-    justify-content: center;
     align-items: center;
     column-gap: 10px;
     cursor: pointer;
     padding: 10px;
-    border-radius: 7%;
+    border-radius: 10px;
+    position: relative;
     transition: background-color 0.2s ease;
 
     &:hover {
-        background-color: rgba(0, 0, 0, 0.05);
+        background-color: #dee2e6;
+    }
+
+    > svg {
+        flex-shrink: 0;
+        padding-left: 5px;
     }
 }
 
 .dropdownMenu {
     position: absolute;
     top: 100%;
-    left: 50%;
-    pointer-events: auto;
-    margin-top: 5px;
-    transform: translateX(-50%);
-    background: #fff;
+    left: 0;
+    width: 100%;
+    margin-top: 6px;
+    border-radius: 10px;
     border: 1px solid #ccc;
-    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-    min-width: 120px;
     overflow: hidden;
+}
 
-    .user_list {
-        list-style-type: none;
+.user_list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
 
-        li {
-            padding: 11px;
-            cursor: pointer;
+    > li {
+        width: 100%;
+        transition: all 0.2s ease;
+        user-select: none;
 
-            &:hover {
-                background-color: #f1f1f1;
+        &:hover {
+            background-color: #f1f1f1;
+        }
+
+        > a {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 14px 0 14px 19px;
+            border-radius: 10px;
+            color: #343a40;
+            text-decoration: none;
+            font-weight: 500;
+            transition: background 0.2s, color 0.2s;
+
+            svg {
+                flex-shrink: 0;
             }
 
-            a {
-                color: inherit;
-                text-decoration: none;
+            &:hover {
+                background-color: #dee2e6;
+                color: #212529;
             }
         }
     }
