--- a/diary/frontend/src/fonts.css
+++ b/diary/frontend/src/fonts.css
@@ -6,11 +6,22 @@
     font-display: swap;
 }
 
+:root {
+    --active-menu-color: #0a7ffd;
+    --aside-block-padding: 2rem;
+}
+
 body {
     font-family: "Inter Medium", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 ul, a {
     padding: 0;
     margin: 0;
+}
+
+#root {
+    display: flex;
 }
