--- a/diary/frontend/src/pages/auth-page/auth.module.css
+++ b/diary/frontend/src/pages/auth-page/auth.module.css
@@ -1,8 +1,9 @@
 .authContainer {
     display: flex;
     justify-content: center;
+    width: 100%;
     align-items: center;
-    padding: 150px 20px 20px 20px;
+    padding: 10px;
 }
 
 .authCard {
