+feature export list to excel file

--- a/diary/frontend/src/components/modal-add-teacher/styles.module.css
+++ b/diary/frontend/src/components/modal-add-teacher/styles.module.css
@@ -29,6 +29,21 @@
     }
 }
 
+.customUpload {
+    padding: 5px;
+    cursor: pointer;
+}
+
+.aboveTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    > input {
+        display: none;
+    }
+}
+
 .label {
     display: flex;
     flex-direction: column;
