--- a/diary/frontend/src/pages/profile-page/profile.module.css
+++ b/diary/frontend/src/pages/profile-page/profile.module.css
@@ -216,3 +216,10 @@
         display: none;
     }
 }
+
+@media (max-width: 771px) {
+    .statsContainer {
+        max-height: 380px;
+        overflow: auto;
+    }
+}
