--- a/diary/frontend/src/pages/management-page/management.module.css
+++ b/diary/frontend/src/pages/management-page/management.module.css
@@ -201,3 +201,51 @@
         max-height: 200px;
     }
 }
+
+@media (max-width: 1050px) {
+    .tabs {
+        max-height: 70px;
+        overflow: auto;
+        flex-direction: column;
+    }
+
+    .editButtons {
+        padding-block: 10px;
+    }
+}
+
+@media (max-width: 880px) {
+    .container {
+        padding: 20px 20px 0 20px;
+    }
+}
+
+@media (max-width: 775px) {
+    .detailScheduleContainer {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 695px) {
+    .detailScheduleContainer {
+        max-width: 320px;
+    }
+}
+
+@media (max-width: 600px) {
+    .title {
+        display: none;
+    }
+}
+
+@media (max-width: 565px) {
+    .detailScheduleContainer {
+        max-width: 270px;
+    }
+}
+
+@media (max-width: 515px) {
+    .container {
+        padding: 0;
+    }
+}
